# ControlStrip-Simulator

./: .gitignore  FLYOUT_LIFECYCLE_REPORT.md  ISSUE23_REPORT.md  OVERNIGHT_REPORT.md  PHASE2_REPORT.md  README.md  build.sh  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/scripts/: apply-click-feedback.py
.github/workflows/: apply-click-feedback.yml  ci.yml  (+19 more)
docs/: pin-unpin-behavior.md  pin-unpin-context-menu.md  pin-unpin-implementation.md  pin-unpin-limitations.md  pin-unpin-scope.md  pin-unpin-test-notes.md  pin-unpin-yaml-example.md
scripts/: apply-pin-unpin-feature.py  apply_cursor_tooltip_fix.py  apply_icon_data_url_fix.py  apply_icon_fallback_style.py  apply_issue_14_dismissal.py  apply_long_press_stability_fix.py  apply_popup_absolute_screen_anchor.py  apply_popup_anchor_fix.py  apply_popup_behavior_fix.py  apply_popup_compact_position_fix.py  apply_popup_coordinate_diagnostics.py  apply_popup_post_map_position.py  apply_popup_top_edge_fix.py  apply_popup_window_menu.py  cleanup_popup_diagnostics.py  fix_popup_diagnostic_type.py  install-user-service.sh  window-check.sh
src/: ControlStrip.css  ControlStrip.ts  WindowMenu.css  contextMenu.css  contextMenu.test.ts  contextMenu.ts  controlStripModel.test.ts  controlStripModel.ts  flyoutLifecycle.test.ts  flyoutLifecycle.ts  main.ts  style.css  transientAppIcons.ts  windowMenu.ts  windowMenuPayload.test.ts  windowMenuPayload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
