[package]
name = "controlstrip-simulator"
version = "0.1.0"
description = "Linux Control Strip app"
authors = ["ControlStrip Simulator"]
edition = "2021"

[lib]
name = "controlstrip_simulator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = ["protocol-asset"] }
walkdir = "2"
